# DeskGap

./: .clang-format  package-lock.json  package.json
lib/src/include/deskgap/: app.hpp  browser_window.hpp  image.hpp  menu.hpp  process_singleton.hpp  tray.hpp  webview.hpp  webview2_webview.hpp
lib/src/platform/win/: BrowserWindow.cpp  BrowserWindow_impl.h  CMakeLists.txt  app.cpp  dg_preload_webview2.js  dispatch.cpp  dispatch_wnd.hpp  menu_impl.h  process_finder.hpp  process_singleton.cpp  process_singleton_impl.h  tray.cpp  tray_impl.h  webview.cpp  webview2_webview.cpp  winrt_webview.cpp
lib/src/platform/win/util/: acrylic_compositor.cpp  acrylic_compositor.h  reg_key.hpp  ui_theme_host.cpp  ui_theme_host.hpp  win_version.cpp  win_version.h  wstring_utf8.h
node/: CMakeLists.txt
node/app/: app.html  main.js
node/js/: CMakeLists.txt
node/js/node/: app.ts  bindings.ts  browser-window.ts  dialog.ts  index.ts  menu.ts  native-exception.ts  process.ts  shell.ts  system-preferences.ts  tray.ts  webview.ts
node/js/node/internal/: app-info.ts  app-path.ts  bindings.ts  dispatch.ts  native.ts
node/js/node/internal/menu/: default-template.ts  roles.ts
node/js/ui/: tsconfig.json
node/src/: main.cc
node/src/node_bindings/: index.cc
node/src/node_bindings/app/: app_wrap.cc
node/src/node_bindings/menu/: menu_wrap.cc  menu_wrap.h
node/src/node_bindings/tray/: tray_wrap.cc  tray_wrap.h
node/src/node_bindings/webview/: webview_wrap.cc  webview_wrap.h
